--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,19 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:orientation="vertical"
-    tools:context=".MainActivity"
-    android:background="#FFFFFF">
+    tools:context=".MainActivity">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:paddingLeft="20dp"
-        android:textSize="20sp"
         android:background="#FFFFFF"
+        android:ems="10"
         android:orientation="vertical"
-        android:ems="10">
+        android:paddingLeft="20dp"
+        android:textSize="20sp">
 
         <TextView
             android:id="@+id/et_head"
@@ -32,88 +32,23 @@
     </LinearLayout>
 
     <View
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_centerInParent="true"
-        android:background="#aaa"/>
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="#aaa" />
 
-    <LinearLayout
+
+    <ListView
+        android:id="@+id/lv_item"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#FFFFFF"
-        android:orientation="vertical"
-        android:padding="20dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@drawable/rounded_corner"
-            android:layout_marginTop="20dp"
-            android:layout_weight="1">
-
-            <TextView
-                android:id="@+id/et_gym"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Sport"
-                android:textSize="40sp"
-                android:fontFamily="sans-serif-black"
-                android:textColor="#F54914"
-                android:gravity="center_vertical"
-                android:layout_marginLeft="20dp"
-                />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@drawable/rounded_corner"
-            android:layout_marginTop="20dp"
-            android:layout_weight="1">
-
-            <TextView
-                android:id="@+id/et_entrance"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Lunch"
-                android:textSize="40sp"
-                android:fontFamily="sans-serif-black"
-                android:textColor="#F54914"
-                android:gravity="center_vertical"
-                android:layout_marginLeft="20dp"
-                />
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@drawable/rounded_corner"
-            android:layout_marginTop="20dp"
-            android:layout_weight="1">
-
-            <TextView
-                android:id="@+id/et_auditorium"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Academics"
-                android:textSize="40sp"
-                android:fontFamily="sans-serif-black"
-                android:textColor="#F54914"
-                android:gravity="center_vertical"
-                android:layout_marginLeft="20dp"
-                />
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            />
-
-    </LinearLayout>
+        android:layout_height="0dp"
+        android:layout_marginBottom="50dp"
+        android:layout_weight="3"
+        android:divider="@null"
+        android:dividerHeight="20sp"
+        android:padding="10dp"></ListView>
 
 
 </LinearLayout>
